apps/AxieAnalytics/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axieanalytics-frontend
  namespace: axieanalytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axieanalytics-frontend
  template:
    metadata:
      labels:
        app: axieanalytics-frontend
    spec:
      containers:
        - name: axieanalytics-frontend
          image: samlapointe01/axie-analytics:frontend-404
          ports:
            - containerPort: 80
      restartPolicy: Always
