apps/AxieAnalytics/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axieanalytics-frontend
  namespace: axieanalytics
spec:
  selector:
    app: axieanalytics-frontend
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 8080
    - protocol: TCP
      port: 443
      name: https
      targetPort: 8080
  type: ClusterIP
