apps/AxieAnalytics/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axieanalytics-ingress
  namespace: axieanalytics
spec:
  rules:
    - host: axieanalytics.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: axieanalytics-frontend
                port:
                  number: 8080
